# airdrop-linked-list

./: .ghci  LICENSE  README.md  airdrop-contracts.cabal  cabal.project  flake.nix  plutarch-airdrop.cabal  plutarch-template.cabal
app/: Main.hs
nix/: project.nix  shell.nix
src/: Profile.hs
src/Airdrop/: Crypto.hs  List.hs  PlutusDataList.hs  Utils.hs
src/AirdropEvent/: Validator.hs
src/AirdropEvent/Mint/: AirdropToken.hs  Common.hs  Standard.hs
src/LiquidityEvent/: Validator.hs
src/LiquidityEvent/Mint/: Common.hs  Standard.hs
src/MerkleTree/: Helpers.hs  MerklePatriciaForestry.hs  Merkling.hs
src/PriceDiscoveryEvent/: Utils.hs
src/Scripts/: AirdropMP.hs  NodeMP.hs
src/Testing/: AirdropValidator.hs  Crypto.hs  Eval.hs  MerklePatriciaForestry.hs  Test.hs  aaaTest.hs
src/Types/: AirdropGlobalLogic.hs  AirdropSet.hs  Constants.hs  DiscoverySet.hs  LiquiditySet.hs
